#N/A: Fix images scalling on mobile

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -513,3 +513,7 @@ pre code *, pre *, pre {
 iframe {
   border: 0;
 }
+
+article img {
+    max-width: 100%;
+}
